--- a/config.json
+++ b/config.json
@@ -1,7 +1,15 @@
 {
-    "model_path": "yolov8n.pt",
-    "task": "track",
-    "output_dir": "./tracking_output",
-    "images_dir": "src/tests/images"
+    "model": {
+      "weights": "yolov8n.pt",
+      "task": "track"
+    },
+    "input": {
+      "images_dir": "src/tests/images"
+    },
+    "output": {
+      "output_dir": "output",
+      "save_animations": true,
+      "csv_filename": "results.csv"
+    }
   }
   
