--- a/config.json
+++ b/config.json
@@ -1,15 +1,13 @@
 {
-    "model": {
-      "weights": "best.pt",
-      "task": "detect"
-    },
-    "input": {
-      "images_dir": "/home/ziv/workspace/Mosquito_Supermodel/benchmark/images"
-    },
-    "output": {
-      "output_dir": "/home/ziv/workspace/Mosquito_Supermodel/benchmark/images_output",
-      "save_animations": true,
-      "csv_filename": "results.csv"
-    }
+  "model": {
+    "weights": "best.pt",
+    "task": "detect"
+  },
+  "input": {
+    "images_dir": "/home/ziv/workspace/Mosquito_Supermodel/sample/images"
+  },
+  "output": {
+    "output_dir": "/home/ziv/workspace/Mosquito_Supermodel/sample/_output",
+    "save_animations": true
   }
-  
+}
