--- a/data.yaml
+++ b/data.yaml
@@ -1,18 +1,22 @@
-train: "/home/ziv/workspace/Mosquito_Supermodel/benchmark/Images"
-val: "/home/ziv/workspace/Mosquito_Supermodel/benchmark/Images"
-nc: 1  # Number of classes
-names: ["mosquito"]  # Class names
+train: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/images/train"
+val: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/images/val"
+
+train_labels: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/labels/train"
+val_labels: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/labels/val"
+
+nc: 1 
+names: ["mosquito"]  
 
 model:
-  weights: "yolo11n.pt"  # Path to model weights
+  weights: "yolo11n.pt" 
   task: "detect"
 
 training:
-  epochs: 100
-  batch_size: 16
+  epochs: 200
+  batch: 256
   imgsz: 640
   optimizer: "AdamW"
 
 output:
-  output_dir: "/home/ziv/workspace/Mosquito_Supermodel/train/v_0"
-
+  output_dir: "/home/bohbot/workspace/Mosquito_Supermodel/train"
+  name: "v_0_all"
