--- a/hyp.yaml
+++ b/hyp.yaml
@@ -1,24 +1,18 @@
-optimizer: "AdamW"
-lr0: 0.001        # Initial learning rate
-lrf: 0.01         # Final learning rate (fraction of lr0)
-momentum: 0.937   # SGD momentum
+optimizer: "SGD"
+lr0: 0.0001       
+lrf: 0.01         
+momentum: 0.937   
 weight_decay: 0.0005
 warmup_epochs: 3.0
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
-box: 7.5          # box loss gain
-cls: 0.5          # cls loss gain
-dfl: 1.5          # DFL loss gain
-hsv_h: 0.015
-hsv_s: 0.7
-hsv_v: 0.4
-degrees: 0.0
-translate: 0.1
-scale: 0.5
-shear: 0.0
-perspective: 0.0
-flipud: 0.0
+hsv_h: 0.01
+hsv_s: 0.01
+hsv_v: 0.01
+degrees: 0.01
+translate: 0.01
+scale: 0.05
+flipud: 0.1
 fliplr: 0.5
-mosaic: 1.0
-mixup: 0.0
-copy_paste: 0.0
+perspective: 0.01
+
