--- a/config.json
+++ b/config.json
@@ -4,25 +4,28 @@
     "task": "track",
     "conf_threshold": 0.8,
     "iou_threshold": 0.2,
-    "vid_stride":3
+    "vid_stride":1
   },
   "input": {
-    "images_dir": "src/tests"
+    "images_dir": "src/tests/vids"
   },
   "output": {
-    "output_dir": "src/tests",
+    "output_dir": "src/tests/csvs",
     "save_animations": true
   },
   "analyze": {
-    "csv_path": "src/tests/results.csv",
-    "output_dir": "src/tests/plots",
+    "csv_path": "src/tests/csvs/results.csv",
+    "csv_results_dir": "src/tests/csvs",
+    "plots_dir" : "src/tests/plots/analize",
     "id_OR_class": "label",
     "true_axis":"true"
   },
   "average_visits": {
     "time_intervals": 1,
     "interval_unit": "seconds",
-    "fps": "30",
-    "output_dir": "src/tests/plots"
-  }
+    "fps": "30"
+  },
+"duration": {
+  "fps": "30"
+}
 }
