--- a/config.json
+++ b/config.json
@@ -1,32 +1,40 @@
 {
   "model": {
-    "weights": "yolo11n.pt",
+    "weights": "mosquito.pt",
     "task": "track",
-    "conf_threshold": 0.85,
+    "conf_threshold": 0.4,
     "iou_threshold": 0.2,
-    "vid_stride":1
+    "vid_stride":10
   },
   "input": {
-    "images_dir": "src/tests/vids"
+    "images_dir": "src/tests/mos"
   },
   "output": {
     "output_dir": "src/tests/csvs",
     "save_animations": true
   },
   "analyze": {
-    "csv_path": "src/tests/csvs/results.csv",
+    "csv_path": "src/tests/csvs/roi_results.csv",
     "csv_results_dir": "src/tests/csvs",
     "plots_dir" : "src/tests/plots/analize",
     "id_OR_class": "track_id", 
     "id_OR_class_note": "track_id or label",
-    "true_axis":"ture"
+    "true_axis": true
   },
   "average_visits": {
     "time_intervals": 2,
     "interval_unit": "seconds",
-    "fps": "30"
+    "fps": "1"
   },
 "duration": {
   "fps": "30"
-}
+},
+"define_roi": {
+        "file_path": "src/tests/mos/C3_R1_Cropped.avi",
+        "csv_path": "src/tests/csvs/results.csv",
+        "output_dir": "src/tests/csvs",
+        "get_inner_roi": true,
+        "choose_farme_for_video": 20
+
+    }
 }
