uplaoded backpu for analyzer

--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "model": {
-    "weights": "mosquito.pt",
+    "weights": "best.pt",
     "task": "track",
     "conf_threshold": 0.4,
     "iou_threshold": 0.2,
     "vid_stride":10
   },
   "input": {
-    "images_dir": "src/tests/mos"
+    "images_dir": "src/tests/mos_vids"
   },
   "output": {
     "output_dir": "src/tests/csvs",
@@ -19,18 +19,18 @@
     "plots_dir" : "src/tests/plots/analize",
     "id_OR_class": "track_id", 
     "id_OR_class_note": "track_id or label",
-    "true_axis": true
+    "true_axis": false 
   },
   "average_visits": {
-    "time_intervals": 2,
+    "time_intervals": 3,
     "interval_unit": "seconds",
-    "fps": "1"
+    "fps": "30"
   },
 "duration": {
   "fps": "30"
 },
 "define_roi": {
-        "file_path": "src/tests/mos/C3_R1_Cropped.avi",
+        "file_path": "src/tests/mos_vids/C3_R1_Cropped.avi",
         "csv_path": "src/tests/csvs/results.csv",
         "output_dir": "src/tests/csvs",
         "get_inner_roi": true,
