--- a/config.json
+++ b/config.json
@@ -7,14 +7,14 @@
     "vid_stride":100
   },
   "input": {
-    "images_dir": "src/tests/mos_vids"
+    "images_dir": "src/datasets/arad/croped_movies"
   },
   "output": {
     "output_dir": "src/tests/csvs",
     "save_animations": true
   },
   "analyze": {
-    "csv_path": "src/tests/csvs/results.csv",
+    "csv_path": "src/tests/csvs/roi_results.csv",
     "csv_results_dir": "src/tests/csvs",
     "plots_dir" : "src/tests/plots/analize",
     "id_OR_class": "track_id", 
@@ -30,7 +30,7 @@
   "fps": "30"
 },
 "define_roi": {
-        "file_path": "src/tests/mos_vids",
+        "file_path": "src/datasets/arad/croped_movies",
 
         "csv_path": "src/tests/csvs/results.csv",
         "output_dir": "src/tests/csvs",
