--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "model": {
-    "weights": "best.pt",
+    "weights": "yolo11n.pt",
     "task": "track",
     "conf_threshold": 0.3,
     "iou_threshold": 0.2,
     "vid_stride":10
   },
   "input": {
-    "images_dir": "src/datasets/arad/croped_movies"
+    "images_dir": "src/tests/vids"
   },
   "output": {
     "output_dir": "src/tests/csvs",
