--- a/data.yaml
+++ b/data.yaml
@@ -1,5 +1,4 @@
-train: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/images/train"
-val: "/home/bohbot/ultralytics/datasets/mos/all_mos_new/images/val"
+data: "/home/bohbot/Evyatar/yaml/all_mos.yaml"
 
 nc: 1 
 names: ["mosquito"]
@@ -13,6 +12,8 @@ training:
   batch: 16
   imgsz: 640
   optimizer: "AdamW"
+  lr0: 0.001
+
 
 output:
   output_dir: "/home/bohbot/workspace/Mosquito_Supermodel/train/trial_code"
