--- a/data.yaml
+++ b/data.yaml
@@ -14,6 +14,9 @@ training:
   optimizer: "AdamW"
   lr0: 0.001
 
+augmentations:
+
+
 
 output:
   output_dir: "/home/bohbot/workspace/Mosquito_Supermodel/train/trial_code"
