filter time interval and prelimeneri sahi

--- a/config.json
+++ b/config.json
@@ -26,7 +26,8 @@
   "average_visits": {
     "time_intervals": 60,
     "interval_unit": "seconds",
-    "fps": "3"
+    "fps": "3",
+    "filter_time_intervals": 27
   },
 "duration": {
   "fps": "4"
