--- a/src/figures/config.yaml
+++ b/src/figures/config.yaml
@@ -2,3 +2,16 @@ paths:
   image_path: "src/tests/images"       # Replace with the actual image folder path
   annotation_path: "src/tests/labels" # Replace with the actual annotations folder path
   save_path: "src/tests/plots_figure1"    # Replace with the folder to save plots
+
+
+loss_figure:
+  csv_path: "/home/wildmosquit0/git/bestModel/sahi_1_l/results.csv"
+  save_folder: "/home/wildmosquit0/git/Mosquito_Supermodel/src/figure/traning_data"
+
+
+case_study:
+  model_path: "/home/wildmosquit0/git/best.pt"
+  base_dir: "/home/wildmosquit0/git/model_exp/setups/seperate"
+  yaml_template_path: "/home/wildmosquit0/git/val.yaml"
+  save_dir: "/home/wildmosquit0/git/model_exp/results"
+  
