--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -1,12 +1,12 @@
 model:
     weights: /home/wildmosquit0/git/bestModel/test_different_models/sahi_l_1_more_300e_200.pt
     task: track
-    conf_threshold: 0.2
+    conf_threshold: 0.25
     iou_threshold: 0.2
-    vid_stride: 5
+    vid_stride: 1000
 sahi:
     slice_size: 640
     overlap_ratio: 0.2
-images_dir: /home/wildmosquit0/git/model_exp/peers/IMG_4078.mp4
-output_dir: src/datasets
+images_dir: /home/wildmosquit0/git/model_exp/peers/2023-07-07_10-47-35.mp4
+output_dir: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/
 save_animations: true
