GUI is almost complite

--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -1,27 +1,23 @@
-input_csv: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/results.csv
-#/home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/slice/results.csv
-            
-output_dir: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output
-task:
-    plotxy: false
-    average_visits: False
-    duration: false
-    heatmap: true
-plotxy:
-    id_OR_class: track_id
-    teratment_or_rep: image_name
-    true_axis: True
 average_visits:
-    time_intervals: 1
-    interval_unit: seconds
-    fps: 2
-    filter_time_intervals: 27
+  filter_time_intervals: 27
+  fps: 2
+  interval_unit: seconds
+  time_intervals: 1
 duration:
-    fps: 4
-
+  fps: 4
 heatmap:
-    image_path: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/2023-07-07_10-47-35_first_frame.jpg
-    true_axis: True
-    grid_size:
-    min_count:
-    
+  grid_size: null
+  image_path: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/2023-07-07_10-47-35_first_frame.jpg
+  min_count: null
+  true_axis: true
+input_csv: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/results.csv
+output_dir: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output
+plotxy:
+  id_OR_class: track_id
+  teratment_or_rep: image_name
+  true_axis: true
+task:
+  average_visits: false
+  duration: false
+  heatmap: true
+  plotxy: false
