--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -7,15 +7,15 @@ duration:
   fps: 4
 heatmap:
   grid_size: null
-  image_path: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/2023-07-07_10-47-35_first_frame.jpg
+  image_path: /home/wildmosquit0/workspace/projects/Arad/data/13_1_first_frame.jpg
   min_count: null
   true_axis: true
-input_csv: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/results.csv
-output_dir: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output
-plotxy:
+input_csv: /home/wildmosquit0/workspace/projects/Arad/data/
+output_dir: /home/wildmosquit0/workspace/projects/Arad/figures
+PlotXY:
   id_OR_class: track_id
   teratment_or_rep: image_name
-  true_axis: true
+  true_axis: trues
 task:
   average_visits: false
   duration: false
