--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -1,14 +1,14 @@
-images_dir: /home/bohbot/workspace/projects/Arad/data/raw_data
+images_dir: /home/wildmosquit0/workspace/data/model_exp/peers/3-2-2023_rep2_cropped_m.mp4
 model:
-  conf_threshold: 0.2
+  conf_threshold: 0.3
   iou_threshold: 0.1
-  object_size: big
-  task: track
+  object_size: small
+  task: slice
   vid_stride: 1
-  weights: /home/bohbot/workspace/weight/sahi_l_1_more_300e_200.pt
-output_dir: /home/bohbot/workspace/projects/Arad/data
+  weights: /home/wildmosquit0/workspace/weights/mosquitoes/exp1_less_crop_2002.pt
+output_dir: /home/wildmosquit0/workspace/test_infer
 sahi:
   overlap_ratio: 0.2
   slice_size: 640
-  track: false
+  track: true
 save_animations: true
