--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -7,11 +7,11 @@ duration:
   fps: 4
 heatmap:
   grid_size: null
-  image_path: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/2023-07-07_10-47-35_first_frame.jpg
+  image_path: /home/wildmosquit0/workspace/projects/Neta/Trap/predict
   min_count: null
   true_axis: true
-input_csv: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output/track/results.csv
-output_dir: /home/wildmosquit0/git/Mosquito_Supermodel/src/example/output
+input_csv: /home/wildmosquit0/workspace/projects/Neta/Trap/filtered_data.csv
+output_dir: /home/wildmosquit0/workspace/projects/Neta/Trap/results
 plotxy:
   id_OR_class: track_id
   teratment_or_rep: image_name
