--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -1,21 +1,21 @@
 average_visits:
-  filter_time_intervals: 27
-  fps: 15
+  filter_time_intervals: 1440
+  fps:  0.05
   interval_unit: minutes
-  time_intervals: 1
+  time_intervals: 180
 duration:
   fps: 4
 heatmap:
   grid_size: null
-  image_path: /home/wildmosquit0/workspace/data/Neta/Predict/shortened_control_1_first_frame.jpg
+  image_path: /home/wildmosquit0/workspace/projects/Neta/Trap/predict
   min_count: null
   true_axis: true
-input_csv: /home/wildmosquit0/workspace/data/Neta/Predict/results.csv
-output_dir: /home/wildmosquit0/workspace/data/Neta
+input_csv: /home/wildmosquit0/workspace/projects/Neta/Trap/filtered_data.csv
+output_dir: /home/wildmosquit0/workspace/projects/Neta/Trap/results
 plotxy:
   id_OR_class: track_id
-  treatment_or_rep: image_name
-  true_axis: trues
+  teratment_or_rep: image_name
+  true_axis: true
 task:
   average_visits: false
   duration: false
