--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -1,14 +1,14 @@
-images_dir: /home/wildmosquit0/workspace/data/Neta/short_vids copy
+images_dir: /home/bohbot/workspace/images/borneol
 model:
-  conf_threshold: 0.2
-  iou_threshold: 0.2
+  conf_threshold: 0.5
+  iou_threshold: 0.5
   object_size: Big
-  task: Predict
-  vid_stride: 10
-  weights:  /home/wildmosquit0/workspace/weights/mosquitoes/exp1_less_crop_2002/weights/best.pt
-output_dir: /home/wildmosquit0/workspace/data/Neta
+  task: track
+  vid_stride: 2
+  weights:  /home/bohbot/Evyatar/runs/detect/test_caht_parametrs2/weights/last.pt
+output_dir: /home/bohbot/workspace/projet/wt
 sahi:
   overlap_ratio: 0.2
   slice_size: 640
   track: false
-save_animations: false
+save_animations: true
