have an option the analize mean visits by trajectoreis

--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -3,15 +3,16 @@ average_visits:
   fps: 15
   interval_unit: minutes
   time_intervals: 1
+  use_track_id: true
 duration:
   fps: 4
 heatmap:
   grid_size: 30
-  image_path: /home/bohbot/workspace/project/wt/track/
+  image_path: /home/bohbot/workspace/project/wt_vs_KO
   min_count: 1
   true_axis: true
-input_csv: /home/bohbot/workspace/project/wt/track/results.csv
-output_dir: /home/bohbot/workspace/project/wt/results_t
+input_csv: /home/bohbot/workspace/project/all/filtered_data.csv
+output_dir: /home/bohbot/workspace/project/03.04/all_f
 plotxy:
   id_OR_class: track_id
   treatment_or_rep: treatment
